--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
                 <ul class="icons-list">
                   <li class="icons-list-item">
-                    <a class="link-icon"
+                    <a class="link-icon" href=""
                       ><svg class="icon-instagram" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-instagram"
@@ -146,19 +146,19 @@
                     ></a>
                   </li>
                   <li class="icons-list-item">
-                    <a class="link-icon"
+                    <a class="link-icon" href=""
                       ><svg class="icon-twitter" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li class="icons-list-item">
-                    <a class="link-icon"
+                    <a class="link-icon" href=""
                       ><svg class="icon-facebook" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li class="icons-list-item">
-                    <a class="link-icon"
+                    <a class="link-icon" href=""
                       ><svg class="icon-linkedin" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
@@ -181,7 +181,7 @@
                 <p class="team-list-text">Frontend Developer</p>
                 <ul class="icons-list">
                   <li class="icons-list-item">
-                    <a class="link-icon"
+                    <a class="link-icon" href=""
                       ><svg class="icon-instagram" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-instagram"
@@ -189,19 +189,19 @@
                     ></a>
                   </li>
                   <li class="icons-list-item">
-                    <a class="link-icon"
+                    <a class="link-icon" href=""
                       ><svg class="icon-twitter" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li class="icons-list-item">
-                    <a class="link-icon"
+                    <a class="link-icon" href=""
                       ><svg class="icon-facebook" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li class="icons-list-item">
-                    <a class="link-icon"
+                    <a class="link-icon" href=""
                       ><svg class="icon-linkedin" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
@@ -225,7 +225,7 @@
 
                 <ul class="icons-list">
                   <li class="icons-list-item">
-                    <a class="link-icon"
+                    <a class="link-icon" href=""
                       ><svg class="icon-instagram" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-instagram"
@@ -233,19 +233,19 @@
                     ></a>
                   </li>
                   <li class="icons-list-item">
-                    <a class="link-icon"
+                    <a class="link-icon" href=""
                       ><svg class="icon-twitter" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li class="icons-list-item">
-                    <a class="link-icon"
+                    <a class="link-icon" href=""
                       ><svg class="icon-facebook" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li class="icons-list-item">
-                    <a class="link-icon"
+                    <a class="link-icon" href=""
                       ><svg class="icon-linkedin" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
@@ -268,7 +268,7 @@
 
                 <ul class="icons-list">
                   <li class="icons-list-item">
-                    <a class="link-icon"
+                    <a class="link-icon" href=""
                       ><svg class="icon-instagram" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-instagram"
@@ -276,19 +276,19 @@
                     ></a>
                   </li>
                   <li class="icons-list-item">
-                    <a class="link-icon"
+                    <a class="link-icon" href=""
                       ><svg class="icon-twitter" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li class="icons-list-item">
-                    <a class="link-icon"
+                    <a class="link-icon" href=""
                       ><svg class="icon-facebook" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li class="icons-list-item">
-                    <a class="link-icon"
+                    <a class="link-icon" href=""
                       ><svg class="icon-linkedin" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
@@ -447,28 +447,28 @@
           <p class="footer-text">Social media</p>
           <ul class="social-media-list">
             <li class="social-media-list-item">
-              <a class="footer-icon">
+              <a class="footer-icon" href="">
                 <svg class="icon-instagram" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-list-item">
-              <a class="footer-icon">
+              <a class="footer-icon" href="">
                 <svg class="icon-twitter" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-list-item">
-              <a class="footer-icon">
+              <a class="footer-icon" href="">
                 <svg class="icon-facebook" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-list-item">
-              <a class="footer-icon">
+              <a class="footer-icon" href="">
                 <svg class="icon-linkedin" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
